--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "royalnet-telethon"
-version = "0.2.0"
+version = "0.3.4"
 description = "A Telethon-based frontend for the royalnet.engineer module."
 authors = ["Stefano Pigozzi <me@steffo.eu>"]
 license = "AGPL-3.0-or-later"
@@ -14,12 +14,11 @@ classifiers = [
     "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.8",
-    "Topic :: Terminals",
 ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-royalnet = "^6.1.2"
+royalnet = "~6.2.10"
 Telethon = "^1.21.1"
 click = "^7.1.2"
 
